; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/extr_create.c_test_refs_create__fsyncs_when_global_opt_set.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/extr_create.c_test_refs_create__fsyncs_when_global_opt_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_OPT_ENABLE_FSYNC_GITDIR = common dso_local global i32 0, align 4
@expected_fsyncs_create = common dso_local global i32 0, align 4
@expected_fsyncs_compress = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_refs_create__fsyncs_when_global_opt_set() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = load i32, i32* @GIT_OPT_ENABLE_FSYNC_GITDIR, align 4
  %4 = call i32 @git_libgit2_opts(i32 %3, i32 1)
  %5 = call i32 @cl_git_pass(i32 %4)
  %6 = call i32 @count_fsyncs(i64* %1, i64* %2)
  %7 = load i32, i32* @expected_fsyncs_create, align 4
  %8 = load i64, i64* %1, align 8
  %9 = call i32 @cl_assert_equal_i(i32 %7, i64 %8)
  %10 = load i32, i32* @expected_fsyncs_compress, align 4
  %11 = load i64, i64* %2, align 8
  %12 = call i32 @cl_assert_equal_i(i32 %10, i64 %11)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_libgit2_opts(i32, i32) #1

declare dso_local i32 @count_fsyncs(i64*, i64*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
